update with my personalized store information after update from artingo

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -32,17 +32,17 @@ enum.bestellstatus.2=Versandt
 enum.bestellstatus.3=Geliefert
 enum.bestellstatus.4=Verloren
 enum.bestellstatus.5=Retoure
-enum.category.1=Kategorie 1
-enum.category.2=Kategorie 2
-enum.category.3=Kategorie 3
-enum.category.4=Kategorie 4
+enum.category.1=Schwarzer Tee
+enum.category.2=Grüner Tee
+enum.category.3=Oolong Tee
+enum.category.4=Kräuter Tee
 enum.payment.1=Bankeinzug
 enum.payment.2=Kreditkarte
 enum.payment.3=PayPal
-enum.subcategory.1=Rot
-enum.subcategory.2=Grün
-enum.subcategory.3=Blau
-enum.subcategory.4=Schwarz
+enum.subcategory.1=Earl Grey
+enum.subcategory.2=Sencha
+enum.subcategory.3=Tieguanyin
+enum.subcategory.4=Pfefferminz
 enum.subcategory.unknown=Unbekannt
 footer.help=Hilfe
 footer.imprint=Impressum
