--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -32,17 +32,17 @@ enum.bestellstatus.2=Shipped
 enum.bestellstatus.3=Delivered
 enum.bestellstatus.4=Lost
 enum.bestellstatus.5=Return
-enum.category.1=Category 1
-enum.category.2=Category 2
-enum.category.3=Category 3
-enum.category.4=Category 4
+enum.category.1=Black Tea
+enum.category.2=Green Tea
+enum.category.3=Oolong Tea
+enum.category.4=Herbal Tea
 enum.payment.1=Direct debit
 enum.payment.2=Credit card
 enum.payment.3=PayPal
-enum.subcategory.1=Red
-enum.subcategory.2=Green
-enum.subcategory.3=Blue
-enum.subcategory.4=Black
+enum.subcategory.1=Earl Grey
+enum.subcategory.2=Sencha
+enum.subcategory.3=Tieguanyin
+enum.subcategory.4=Peppermint
 enum.subcategory.unknown=Unknown
 footer.help=Help
 footer.imprint=Legal notice
