Change in the About page

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -1,4 +1,4 @@
-about.p1=Diese <a href="https://de.wikipedia.org/wiki/Webanwendung" target="_blank">Web-App</a> ist im Rahmen des \
+about.p1=Diese Web-App ist im Rahmen des \
 <a href="https://www.karrieretutor.de/azav/java/" target="_blank">Java-Kurses</a> \
 von <a href="https://www.karrieretutor.de" target="_blank">karriere tutor</a>&trade; entstanden. \
 Der Server-Teil basiert auf <a href="https://spring.io/projects/spring-boot" target="_blank">Spring Boot</a> \
