--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,13 +1,13 @@
-about.p1=This <a href="https://en.wikipedia.org/wiki/Web_application" target="_blank">web app</a> originates from the \
+about.p1=This web application was developed as part of the \
 <a href="https://www.karrieretutor.de/azav/java/" target="_blank">Java course</a> \
 of <a href="https://www.karrieretutor.de" target="_blank">karriere tutor</a>&trade;. \
-The server part is based on <a href="https://spring.io/projects/spring-boot" target="_blank">Spring Boot</a> \
-and uses <a href="https://en.wikipedia.org/wiki/Representational_state_transfer" target="_blank">REST-Services</a> \
-in <a href="https://en.wikipedia.org/wiki/JSON" target="_blank">JSON format</a>. \
-The client part uses <a href="https://getmdl.io/started/index.html" target="_blank">Material Design Lite</a> \
-and <a href="https://vuejs.org/v2/guide/" target="_blank">Vue.js</a>. The source code is located on \
-<a href="https://github.com/artingo/spring-boot" target="_blank">GitHub</a> and a demo version is hosted on \
-<a href="https://karrieretutor-shop.herokuapp.com" target="_blank">Heroku</a>.
+The server side is based on Spring Boot \
+and uses REST-Services \
+in JSON format \
+The client side uses Material Design Lite \
+and Vue.js. The source code is located on \
+<a href="https://github.com/dkamperman/spring-boot" target="_blank">GitHub</a> and a demo version is hosted on \
+Heroku.
 about.title=About this web app
 button.abort=Cancel
 button.buy.now=Buy it now
