thymeleaf security implementation

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -84,11 +84,11 @@ lang.en=Englisch
 lang.select=-- Wählen --
 nav.about=Über uns
 nav.account=Mein Konto
-nav.cart=Warenkorb
+nav.cart=Ihr Warenkorb
 nav.login=Anmelden
 nav.logout=Abmelden
 nav.orders=Bestellungen
-nav.portfolio=Shop
+nav.portfolio=Unsere Produkte
 nav.product=Produkt erfassen
 no.products=Noch keine Produkte erfasst!
 order.failure=Bei der Bestellung ist ein Fehler aufgetreten.<br/>Bitte versuchen Sie es erneut.
@@ -106,7 +106,7 @@ table.price=Preis
 title.dialog=Sind Sie sicher?
 title.shipping.address=Lieferadresse
 title.shipping.payment=Zahlungsart
-title.shop=Spring Demo-Shop
+title.shop=Fresh Tea Shop
 validation.adresse.nachname=Bitte geben Sie Ihren Nachnamen ein
 validation.adresse.ort=Bitte geben Sie den Lieferort ein
 validation.adresse.plz=Bitte geben Sie die Postleitzahl ein
