--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -84,12 +84,12 @@ lang.en=English
 lang.select=-- Select --
 nav.about=About us
 nav.account=Account
-nav.cart=Shopping cart
+nav.cart=Your shopping cart
 nav.login=Login
 nav.logout=Logout
 nav.orders=Orders
-nav.portfolio=Shop
-nav.product=Enter product
+nav.portfolio=Our Products
+nav.product=Create new product
 no.products=No products listed yet!
 order.failure=An error occurred during the ordering process.<br/>Please try again.
 order.success=We have received your order.
@@ -106,7 +106,7 @@ table.price=Price
 title.dialog=Are you sure?
 title.shipping.address=Delivery address
 title.shipping.payment=Payment method
-title.shop=Spring demo shop
+title.shop=Fresh Tea Shop
 validation.adresse.nachname=Please enter your surname
 validation.adresse.ort=Please enter place of delivery
 validation.adresse.plz=Please enter your zip code
