Added Help and Legal pages

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -53,7 +53,9 @@ enum.subcategory.4=Pfefferminz
 enum.subcategory.unknown=Unbekannt
 footer.help=Hilfe
 footer.imprint=Impressum
-footer.title=Produkt-Shop
+footer.title=Fresh Tea Shop
+help.title=Hilfe im Umgang mit dem Web-Shop
+help.p1=Für Hilfe mit diesem Web-Shop bitte kontaktieren Sie uns unter über folgende Anschrift oder E-Mail Adresse:
 h2.edit.product=Produkt bearbeiten
 h3.edit.product=Bitte geben Sie hier die Daten des Produktes ein:
 label.category.short=Kategorie:
@@ -92,9 +94,12 @@ lang.change=Sprache
 lang.de=Deutsch
 lang.en=Englisch
 lang.select=-- Wählen --
+legal.title=Informationspflicht laut § 5 TMG.
 nav.about=Über uns
 nav.account=Mein Konto
 nav.cart=Ihr Warenkorb
+nav.help=Hilfe
+nav.legal=Impressum
 nav.login=Anmelden
 nav.logout=Abmelden
 nav.orders=Bestellungen
