--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -52,8 +52,10 @@ enum.subcategory.3=Tieguanyin
 enum.subcategory.4=Peppermint
 enum.subcategory.unknown=Unknown
 footer.help=Help
-footer.imprint=Legal notice
-footer.title=Product shop
+footer.imprint=Legal
+footer.title=Fresh Tea Shop
+help.title=Help with the usage of this web-shop
+help.p1=For help with this web-shop please do not hesitate to contact us via the following mail or email address:
 h2.edit.product=Edit product
 h3.edit.product=Please enter the data of the product here:
 label.category.short=Category:
@@ -92,9 +94,12 @@ lang.change=Language
 lang.de=German
 lang.en=English
 lang.select=-- Select --
+legal.title=Informationspflicht laut § 5 TMG.
 nav.about=About us
 nav.account=Account
 nav.cart=Your shopping cart
+nav.help=Help
+nav.legal=Legal
 nav.login=Login
 nav.logout=Logout
 nav.orders=Orders
