main background set header and main background resources added to about us page set a links to black

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,12 +1,12 @@
 about.p1=This web application was developed as part of the \
-<a href="https://www.karrieretutor.de/azav/java/" target="_blank">Java course</a> \
-of <a href="https://www.karrieretutor.de" target="_blank">karriere tutor</a>&trade;. \
+Java course \
+of karriere tutor&trade;. \
 The server side is based on Spring Boot \
 and uses REST-Services \
 in JSON format \
 The client side uses Material Design Lite \
 and Vue.js. The source code is located on \
-<a href="https://github.com/dkamperman/spring-boot" target="_blank">GitHub</a> and a demo version is hosted on \
+GitHub and a demo version is hosted on \
 Heroku.
 about.title=About this web app
 button.abort=Cancel
