added more subcategories and cleaned up some spelling

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -50,6 +50,12 @@ enum.subcategory.1=Earl Grey
 enum.subcategory.2=Sencha
 enum.subcategory.3=Tieguanyin
 enum.subcategory.4=Pfefferminz
+enum.subcategory.5=Matcha
+enum.subcategory.6=Tencha
+enum.subcategory.7=Kamille
+enum.subcategory.8=Früchte
+enum.subcategory.9=Ingwer
+enum.subcategory.10=Darjeeling
 enum.subcategory.unknown=Unbekannt
 footer.help=Hilfe
 footer.imprint=Impressum
@@ -58,9 +64,9 @@ help.title=Hilfe im Umgang mit dem Web-Shop
 help.p1=Für Hilfe mit diesem Web-Shop bitte kontaktieren Sie uns unter über folgende Anschrift oder E-Mail Adresse:
 h2.edit.product=Produkt bearbeiten
 h3.edit.product=Bitte geben Sie hier die Daten des Produktes ein:
-label.category.short=Kategorie:
+label.category.short=Sorte:
 label.category=Kategorie des Produktes
-label.dialog=Wollen Sie dieses Produkt wirklich löschen?
+label.dialog=Wollen Sie wirklich ein Stück dieses Produktes aus dem Warenkorb entfernen?
 label.file=Foto des Produkts
 label.name=Name des Produktes
 label.number=Anzahl
@@ -86,7 +92,7 @@ label.shipping.city=Ort
 label.shipping.name=Name
 label.shipping.prename=Vorname
 label.shipping.zip=PLZ
-label.subcategory.short=Farbe:
+label.subcategory.short=Typ:
 label.subcategory=Farbe des Produktes
 label.total.number=Gesamtzahl:
 label.total.price=Gesamtpreis:
@@ -95,7 +101,7 @@ lang.de=Deutsch
 lang.en=Englisch
 lang.select=-- Wählen --
 legal.title=Informationspflicht laut § 5 TMG.
-nav.about=Über uns
+nav.about=Über Uns
 nav.account=Mein Konto
 nav.cart=Ihr Warenkorb
 nav.help=Hilfe
