--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -50,6 +50,12 @@ enum.subcategory.1=Earl Grey
 enum.subcategory.2=Sencha
 enum.subcategory.3=Tieguanyin
 enum.subcategory.4=Peppermint
+enum.subcategory.5=Matcha
+enum.subcategory.6=Tencha
+enum.subcategory.7=Chamomile
+enum.subcategory.8=Fruit
+enum.subcategory.9=Ginger
+enum.subcategory.10=Darjeeling
 enum.subcategory.unknown=Unknown
 footer.help=Help
 footer.imprint=Legal
@@ -58,9 +64,9 @@ help.title=Help with the usage of this web-shop
 help.p1=For help with this web-shop please do not hesitate to contact us via the following mail or email address:
 h2.edit.product=Edit product
 h3.edit.product=Please enter the data of the product here:
-label.category.short=Category:
+label.category.short=Sort:
 label.category=Category of the product
-label.dialog=Do you really want to delete this product?
+label.dialog=Do you really want to remove one item of this product from the cart?
 label.file=Image of product
 label.name=Name of the product
 label.number=Quantity
@@ -86,7 +92,7 @@ label.shipping.city=City
 label.shipping.name=Family name
 label.shipping.prename=First name
 label.shipping.zip=ZIP code
-label.subcategory.short=Color:
+label.subcategory.short=Type:
 label.subcategory=Color of the product
 label.total.number=Number of products:
 label.total.price=Total price:
@@ -95,9 +101,9 @@ lang.de=German
 lang.en=English
 lang.select=-- Select --
 legal.title=Informationspflicht laut § 5 TMG.
-nav.about=About us
+nav.about=About Us
 nav.account=Account
-nav.cart=Your shopping cart
+nav.cart=Shopping cart
 nav.help=Help
 nav.legal=Legal
 nav.login=Login
