email subject line removed "demo shop"

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -33,7 +33,7 @@ customer.register.failure=Bei der Registrierung ist ein Fehler aufgetreten.<br/>
 customer.register.success=Sie wurden erfolgreich registriert
 customer.success=Kundendaten wurden gespeichert
 email.customer.changed=[Demo-Shop] Kundendaten geändert
-email.subject=[Demo-Shop] Bestellbestätigung für Ihre Bestellung Nr. {0} von {1} Artikeln
+email.subject=Bestellbestätigung für Ihre Bestellung Nr. {0} von {1} Artikeln
 enum.bestellstatus.1=Offen
 enum.bestellstatus.2=Versandt
 enum.bestellstatus.3=Geliefert
