--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -33,7 +33,7 @@ customer.register.failure=An error occurred during registration.<br/>Please try 
 customer.register.success=You have been successfully registered
 customer.success=Account data was saved
 email.customer.changed=[Demo Shop] Customer data changed
-email.subject=[Demo-Shop] Order confirmation for your order no. {0} of {1} articles"
+email.subject=Order confirmation for your order no. {0} of {1} articles"
 enum.bestellstatus.1=Open
 enum.bestellstatus.2=Shipped
 enum.bestellstatus.3=Delivered
